content done, need to make responsive, notes in HTML

--- a/index.html
+++ b/index.html
@@ -4,11 +4,98 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Declan Toohey</title>
+    <title>Declan Toohey | About</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+    <!-- currently works like it should on mobile, but not on pc, need to look into responsive layout -->
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-sm navbar-styling">
+                <h1>Declan Toohey</h1>
+            </div>
+        </div>
+        <!-- Hyperlinking? might need to change -->
+        <div class="row">
+            <div class="col-2 navbar-styling"></div>
+            <div class="col-2 navbar-styling">
+                <a href="index.html">Home</a>
+            </div>
+            <div class="col-1 navbar-styling">
+                |
+            </div>
+            <div class="col-2 navbar-styling">
+                <a href="portfolio.html">Portfolio</a>
+            </div>
+            <div class="col-1 navbar-styling">
+                |
+            </div>
+            <div class="col-2 navbar-styling">
+                <a href="contact.html">Contact</a>
+            </div>
+            <div class="col-2 navbar-styling"></div>
+        </div>
+    </div>
 
+    <br>
+
+    <!-- everything the same on all three pages ^^^ -->
+
+    <!-- actual content of the page, need to refract code,  -->
+    <div class="container container-aboutme border border-dark">
+        <div class="row">
+            <div class="col">
+                <h2>About Me</h2>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <hr>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <!-- ^^ Essentially the same just change h2 to correct name for each page ^^-->
+                <!-- Is the heading of the page -->
+                <img src="man.jpg" style="height: 250px; width: 300px; margin-right: 10px; float: left;">
+                <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officiis esse fugiat enim cum blanditiis
+                    quod autem quae perferendis earum odio, eveniet natus ullam eos expedita, dolorem repudiandae
+                    doloribus consequuntur magnam rem tempore maiores. Ex officia qui temporibus perspiciatis odit nihil
+                    debitis velit minus, nisi harum maxime commodi atque molestiae illo?
+                    <br>
+                    <br>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat, suscipit consequuntur. Earum
+                    ratione magnam officia unde similique voluptates repellat ut excepturi, aut, assumenda a ex nam at
+                    quos quidem tenetur? Facilis pariatur ipsam veritatis error sunt, nemo commodi quibusdam repudiandae
+                    quaerat architecto, at, esse velit alias quam nisi dolores reiciendis. ipsum, dolor sit amet
+                    consectetur adipisicing elit. Molestias eveniet ad perferendis minima at
+                    voluptatem voluptas dolorum consectetur qui ipsum. Perspiciatis nisi in fuga earum.
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit tempore ex quibusdam, optio porro ad
+                    dignissimos exercitationem tenetur magni voluptatem quod eius in, quaerat soluta nulla. Veniam
+                    maiores nulla expedita explicabo, suscipit, pariatur rem totam dolorem velit maxime ab asperiores
+                    eius quae nesciunt optio doloremque, consequuntur possimus excepturi itaque nihil beatae saepe illum
+                    fugit sunt! Debitis ipsum perferendis libero, aperiam officiis magni est, deleniti nobis eius
+                    laborum corrupti itaque molestiae quis aliquam qui praesentium commodi rerum consequuntur
+                    repudiandae dolores earum provident maxime et! Placeat eum, totam iure nisi quas, qui vero est optio
+                    illum nobis ut obcaecati, aliquam ipsam magni?
+                </p>
+            </div>
+        </div>
+    </div>
+
+    <!-- foot is okay, probs need to refract a bit, then add to all other pages! -->
+    <footer class="page-footer font-small blue">
+        <p></p>
+
+        <div class="footer-copyright text-center py-3">
+            Copyrightmf
+        </div>
+        <!-- Copyright -->
+
+    </footer>
 </body>
 
 </html>
