--- a/portfolio.html
+++ b/portfolio.html
@@ -5,10 +5,66 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Declan Toohey | Portfolio</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+    <!-- NAVBAR -->
+    <!-- NEED TO MAKE RESPONSIVE LAYOUT, CURRENTLY WORKS FOR DESKTOPISH -->
+    <div class="container container-aboutme border border-dark">
+        <div class="row">
+            <div class="col">
+                <h2>Portfolio</h2>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <hr>
+            </div>
+        </div>
+        <div class="row row-margin">
+            <div class="col-6">
+                <div class="portfolio-images">
+                    <img src="https://via.placeholder.com/250/0000FF/FFFFFF" />
+                    <h3>Word Guess</h3>
+                </div>
+            </div>
+            <div class="col-6">
+                <div class="portfolio-images">
+                    <img src="https://via.placeholder.com/250/0000FF/FFFFFF" />
+                    <h3>RPG Game</h3>
+                </div>
+            </div>
+        </div>
+        <div class="row row-margin">
+            <div class="col-6">
+                <div class="portfolio-images">
+                    <img src="https://via.placeholder.com/250/0000FF/FFFFFF" />
+                    <h3>Trivia Game</h3>
+                </div>
+            </div>
+            <div class="col-6">
+                <div class="portfolio-images">
+                    <img src="https://via.placeholder.com/250/0000FF/FFFFFF" />
+                    <h3>Info Widget</h3>
+                </div>
+            </div>
+        </div>
+        <div class="row row-margin">
+            <div class="col-6 ">
+                <div class="portfolio-images">
+                    <img src="https://via.placeholder.com/250/0000FF/FFFFFF" />
+                    <h3>Rock Paper Scissors</h3>
+                </div>
+            </div>
+        </div>
+    </div>
+    </div>
 
+
+    <!-- FOOTER -->
 </body>
 
 </html>
