--- a/contact.html
+++ b/contact.html
@@ -5,10 +5,50 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Declan Toohey | Contact</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+    <!-- NAVBAR - ONCE ITS 100 DONE -->
+    <br>
 
+    <div class="container container-aboutme border border-dark">
+        <div class="row">
+            <div class="col">
+                <h2>Contact</h2>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <hr style="color: black; background-color: black; height: 2px;">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <form>
+                    <div class="form-group">
+                        <label for="name-input">Name</label>
+                        <input type="name" class="form-control" id="name-input" placeholder="John Smith">
+                    </div>
+                    <div class="form-group">
+                        <label for="email-input">Email address</label>
+                        <input type="email" class="form-control" id="email-input" placeholder="name@example.com">
+                    </div>
+                    <div class="form-group">
+                        <label for="message-input">Message</label>
+                        <textarea class="form-control" id="message-input" rows="3"></textarea>
+                    </div>
+
+                    <input class="btn btn-primary" type="submit" value="Submit">
+
+                </form>
+            </div>
+        </div>
+    </div>
+
+    <!-- FOOTER -->
 </body>
 
 </html>
