Added Responsive elmnts, nav+foot, need2do comms

--- a/contact.html
+++ b/contact.html
@@ -11,10 +11,32 @@
 </head>
 
 <body>
+
+
+    <!-- NAVBAR -->
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-xs col-xs-styling col-sm-4 navbar-styling">
+                <h1>Declan Toohey</h1>
+            </div>
+            <div class="col-xs  col-sm-8 navbar-styling">
+                <p id="p-nav">
+                    <a href="index.html" class="href">About</a>
+                    |
+                    <a href="portfolio.html" class="href">Portfolio</a>
+                    |
+                    <a href="contact.html" class="href">Contact</a>
+                </p>
+            </div>
+        </div>
+    </div>
+
+
+
     <!-- NAVBAR - ONCE ITS 100 DONE -->
     <br>
 
-    <div class="container container-aboutme border border-dark">
+    <div class="container container-aboutme border border-dark float-left-mod">
         <div class="row">
             <div class="col">
                 <h2>Contact</h2>
@@ -42,13 +64,19 @@
                     </div>
 
                     <input class="btn btn-primary" type="submit" value="Submit">
-
+                    <p></p>
                 </form>
             </div>
         </div>
     </div>
 
     <!-- FOOTER -->
+    <footer class=" page-footer font-small blue">
+        <p></p>
+        <div class="footer-copyright text-center py-3">
+            Copyright&copy
+        </div>
+    </footer>
 </body>
 
 </html>
