--- a/contact.html
+++ b/contact.html
@@ -7,20 +7,23 @@
     <title>Declan Toohey | Contact</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style-navbar.css">
+    <link rel="stylesheet" href="css/style-footer.css">
 </head>
 
 <body>
-
-
     <!-- NAVBAR -->
-    <div class="container-fluid">
+    <nav class="container-fluid">
         <div class="row">
-            <div class="col-xs col-xs-styling col-sm-4 navbar-styling">
+            <!-- setting xs and sm+ columns, styling for both instances -->
+            <div class="col-xs col-sm-4 navbar-styling col-xs-styling">
                 <h1>Declan Toohey</h1>
             </div>
-            <div class="col-xs  col-sm-8 navbar-styling">
-                <p id="p-nav">
+
+            <div class="col-xs col-sm-8 navbar-styling">
+                <!-- setting id to style navbar links-->
+                <p class="nav-links">
                     <a href="index.html" class="href">About</a>
                     |
                     <a href="portfolio.html" class="href">Portfolio</a>
@@ -29,51 +32,66 @@
                 </p>
             </div>
         </div>
-    </div>
+    </nav>
 
-
-
-    <!-- NAVBAR - ONCE ITS 100 DONE -->
+    <!-- a break between the navbar container and the main content container -->
     <br>
 
-    <div class="container container-aboutme border border-dark float-left-mod">
+    <!-- CONTACT -->
+    <!-- setting up container for content, with a dark border 
+        and additional styling with content-styling  -->
+    <section class="container border border-dark content-styling">
         <div class="row">
             <div class="col">
+                <!-- Heading -->
                 <h2>Contact</h2>
             </div>
         </div>
         <div class="row">
             <div class="col">
-                <hr style="color: black; background-color: black; height: 2px;">
+                <!-- line between heading and content -->
+                <hr>
             </div>
         </div>
         <div class="row">
             <div class="col">
+                <!-- a bootstrap form -->
                 <form>
+                    <!-- Name -->
                     <div class="form-group">
                         <label for="name-input">Name</label>
                         <input type="name" class="form-control" id="name-input" placeholder="John Smith">
                     </div>
+
+                    <!-- Email -->
                     <div class="form-group">
                         <label for="email-input">Email address</label>
                         <input type="email" class="form-control" id="email-input" placeholder="name@example.com">
                     </div>
+
+                    <!-- Message -->
                     <div class="form-group">
                         <label for="message-input">Message</label>
                         <textarea class="form-control" id="message-input" rows="3"></textarea>
                     </div>
 
+                    <!-- Button -->
                     <input class="btn btn-primary" type="submit" value="Submit">
+
+                    <!-- break between button and end of form -->
                     <p></p>
                 </form>
             </div>
         </div>
-    </div>
+    </section>
 
     <!-- FOOTER -->
-    <footer class=" page-footer font-small blue">
+    <footer class="page-footer font-small blue">
+        <!-- empty p tag to allow for small blue line at the top of the footer -->
         <p></p>
-        <div class="footer-copyright text-center py-3">
+
+        <!-- puts in a scalable padding using bootstrap -->
+        <div class="py-3 footer-bg">
             Copyright&copy
         </div>
     </footer>
