added comments, refrator code & made aboutme personal

--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
                 <!-- setting image to a photo of me and styling to allow the text to wrap around the text but then also 
                     move accordingly when in mobile view -->
                 <img src="images/declan.jpg" id="index-img">
-                <p> Born in Hobart Tasmania, Australia, raised in South East Asia, two years in Brunei and eight in
-                    Singapore,
-                    moved to Adelaide in 2015. Declan has had an interest in Computer Science/Information Technology
-                    since Year 1. This developed through playing games such as Minecraft, Team Fortress 2, Terraria,
-                    Counter-Strike: Global Offensive, Defence of the Ancients 2 (DOTA2) and many others.
+                <p> Born in Hobart Tasmania, Australia, in the Year 2000 and raised in South East Asia, two years in
+                    Brunei and eight in Singapore, moved to Adelaide in 2015. Declan has had an interest in Computer
+                    Science/Information Technology since Year 1. This developed through playing games such as Minecraft,
+                    Team Fortress 2, Terraria,Counter-Strike: Global Offensive, Defence of the Ancients 2 (DOTA2) and
+                    many others.
                     <br><br>
                     This lead to doing some sort of IT throughout schooling, although was a complusary subject from
                     Years 1 to 5, yet decided to stick with it as he found it enjoyable and interesting. After moving
@@ -82,6 +82,8 @@
                     University of Adelaide course offering a 24 week intensive course on Fullstack Development. He is
                     currently attending these courses at night and on weekends while still being able to work during
                     weekdays.
+                    <br><br>
+                    Find his GitHub <a href="https://github.com/djtoohey/" target="_blank">here!</a>
 
 
 
