updated contact page

--- a/contact.html
+++ b/contact.html
@@ -55,32 +55,41 @@
         </div>
         <div class="row">
             <div class="col">
+
+                <!-- email, phone and linkedIn with working hyperlink -->
+                <p>Email: <a href="mailto:contact@declantoohey.com"> contact@declantoohey.com</a></p>
+                <p>Phone: <a href="tel:+61 431490343">+61 431 490 343</a></p>
+                <p>LinkedIn: <a
+                        href="https://www.linkedin.com/in/DeclanToohey/">https://www.linkedin.com/in/DeclanToohey/</a>
+                </p>
+
+                <!-- will update form to work at later date -->
                 <!-- a bootstrap form -->
-                <form>
-                    <!-- Name -->
-                    <div class="form-group">
+                <!-- <form> -->
+                <!-- Name -->
+                <!-- <div class="form-group">
                         <label for="name-input">Name</label>
                         <input type="name" class="form-control" id="name-input" placeholder="John Smith">
-                    </div>
+                    </div> -->
 
-                    <!-- Email -->
-                    <div class="form-group">
+                <!-- Email -->
+                <!-- <div class="form-group">
                         <label for="email-input">Email address</label>
                         <input type="email" class="form-control" id="email-input" placeholder="name@example.com">
-                    </div>
+                    </div> -->
 
-                    <!-- Message -->
-                    <div class="form-group">
+                <!-- Message -->
+                <!-- <div class="form-group">
                         <label for="message-input">Message</label>
                         <textarea class="form-control" id="message-input" rows="3"></textarea>
-                    </div>
+                    </div> -->
 
-                    <!-- Button -->
-                    <input class="btn btn-primary" type="submit" value="Submit">
+                <!-- Button -->
+                <!-- <input class="btn btn-primary" type="submit" value="Submit"> -->
 
-                    <!-- break between button and end of form -->
-                    <p></p>
-                </form>
+                <!-- break between button and end of form -->
+                <!-- <p></p> -->
+                <!-- </form> -->
             </div>
         </div>
     </section>
