--- a/portfolio.html
+++ b/portfolio.html
@@ -53,48 +53,32 @@
                 <!-- line between heading and content -->
             </div>
         </div>
+        <h4>Resume: <a href="Assets\RESUME2020.pdf">Last Updated 07/2020</a></h4>
         <!-- 3 rows, max 2 cols -->
         <div class="row ">
-            <div class="col-xs col-sm">
-                <div class="portfolio-images-div">
-                    <!-- image with styling to allow for mobile responsiveness -->
-                    <img src="images/image1.png" class="portfolio-images" />
-
-                </div>
+            <div>
+                <a href="https://djtoohey.github.io/homework-wk6/">
+                    <img src="https://raw.githubusercontent.com/djtoohey/homework-wk6/master/assets/finished.png"
+                        alt="weather dashboard app" class="portfolio-img">
+                </a>
+                <p><a href="https://github.com/djtoohey/homework-wk6/">github repo</a></p>
             </div>
-            <div class="col-xs col-sm">
-                <div class="portfolio-images-div">
-                    <!-- image with styling to allow for mobile responsiveness -->
-                    <img src="images/image2.png" class="portfolio-images" />
-
-                </div>
+            <div>
+                <a href="https://djtoohey.github.io/homework-wk5/">
+                    <img src="https://raw.githubusercontent.com/djtoohey/homework-wk5/master/assets/finished.png"
+                        alt="work day scheduler app" class="portfolio-img">
+                </a>
+                <p><a href="https://github.com/djtoohey/homework-wk5/">github repo</a></p>
             </div>
-        </div>
-        <div class="row ">
-            <div class="col-xs col-sm">
-                <div class="portfolio-images-div">
-                    <!-- image with styling to allow for mobile responsiveness -->
-                    <img src="images/image3.png" class="portfolio-images" />
-
-                </div>
-            </div>
-            <div class="col-xs col-sm">
-                <div class="portfolio-images-div">
-                    <!-- image with styling to allow for mobile responsiveness -->
-                    <img src="images/image4.png" class="portfolio-images" />
-
-                </div>
+            <div>
+                <a href="https://djtoohey.github.io/homework-wk4/">
+                    <img src="https://raw.githubusercontent.com/djtoohey/homework-wk4/master/assets/finished.png"
+                        alt="code quiz app" class="portfolio-img">
+                </a>
+                <p><a href="https://github.com/djtoohey/homework-wk4/">github repo</a></p>
             </div>
         </div>
-        <div class="row ">
-            <div class="col-xs col-sm ">
-                <div class="portfolio-images-div">
-                    <!-- image with styling to allow for mobile responsiveness -->
-                    <img src="images/image5.png" class="portfolio-images" />
 
-                </div>
-            </div>
-        </div>
     </section>
 
 
