added group project to portfolio list

--- a/portfolio.html
+++ b/portfolio.html
@@ -57,25 +57,35 @@
         <!-- 3 rows, max 2 cols -->
         <div class="row ">
             <div>
+                <h3 class="h3-portfolio">Music Quiz App</h3>
+                <a href="https://marasinipradeep.github.io/music-app/">
+                    <img src="Assets\Images\proj1Finished.png" alt="music quiz app" class="portfolio-img">
+                </a>
+                <p class="p-portfolio"><a href="https://github.com/marasinipradeep/music-app/">github repo</a></p>
+            </div>
+            <div>
+                <h3 class="h3-portfolio">Weather Dashboard</h3>
                 <a href="https://djtoohey.github.io/homework-wk6/">
                     <img src="https://raw.githubusercontent.com/djtoohey/homework-wk6/master/assets/finished.png"
                         alt="weather dashboard app" class="portfolio-img">
                 </a>
-                <p><a href="https://github.com/djtoohey/homework-wk6/">github repo</a></p>
+                <p class="p-portfolio"><a href="https://github.com/djtoohey/homework-wk6/">github repo</a></p>
             </div>
             <div>
+                <h3 class="h3-portfolio">Work Day Scheduler</h3>
                 <a href="https://djtoohey.github.io/homework-wk5/">
                     <img src="https://raw.githubusercontent.com/djtoohey/homework-wk5/master/assets/finished.png"
                         alt="work day scheduler app" class="portfolio-img">
                 </a>
-                <p><a href="https://github.com/djtoohey/homework-wk5/">github repo</a></p>
+                <p class="p-portfolio"><a href="https://github.com/djtoohey/homework-wk5/">github repo</a></p>
             </div>
             <div>
+                <h3 class="h3-portfolio">Coding Quiz App</h3>
                 <a href="https://djtoohey.github.io/homework-wk4/">
                     <img src="https://raw.githubusercontent.com/djtoohey/homework-wk4/master/assets/finished.png"
                         alt="code quiz app" class="portfolio-img">
                 </a>
-                <p><a href="https://github.com/djtoohey/homework-wk4/">github repo</a></p>
+                <p class="p-portfolio"><a href="https://github.com/djtoohey/homework-wk4/">github repo</a></p>
             </div>
         </div>
 
